2006-03-27  Guillem Jover  <guillem.jover@nokia.com>

	* hildon-navigator/application-switcher.c
	  (application_switcher_initialize_menu): Refactor signal addition to ...
	  (as_add_signal): ... here. New function.

2006-03-27  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/application-switcher.c: Factorized creation
	  of AS buttons (patch courtesy of Guillem Jover, Closes N#24957)

2006-03-27  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/layout-manager.c: Fixed launching of the help from the
	  menu (Closes N#24891)

2006-03-27  Johan Bilien <johan.bilien@nokia.com>

	* configure.ac: 2.6.4

2006-03-24  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/layout-manager.c: (Closes N#24617)
	  - layout_mode_begin(): switch layout and home menus while saving home
	    menu
	  - layout_mode_end(): switch layout and home menus

2006-03-24  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/hildon-home-main.[ch]: Fixed various logical ids in
	  the home background settings (Closes N#24837)

2006-03-24  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-wm-memory.c: (Closes N#20305)
	  - hn_wm_memory_kill_all_watched_foreach_func: fixed a bug when accessing
	    the only_kill_able_to_hibernate argument (passed as reference,
	    accessed as value).

2006-03-24  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/layout-manager.c: If the applet EventBox has a child,
	  draw the red border on the child's window, or it will be
	  overwritten by the child's painting (Closes N#24722)

2006-03-24  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/hildon-home-image-loader.c: Removed an unnecessary
	  image copy. (Closes N#22549)

2006-03-23  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/layout-manager.c: (Closes N#24439 and N#24767)
	  - added field to layout mode internal struct to hold handler id
	  - layout_mode_end(): added disconnecting signal handler to catch ESC
	    hw key event to cancel